--- a/index.html
+++ b/index.html
@@ -77,5 +77,7 @@
             <li><a href="privacy.html">Privacy Policy</a></li>
         </ul>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
