--- a/product-details.html
+++ b/product-details.html
@@ -18,7 +18,7 @@
     <section class="product-details">
         <div class="product-details-container">
             <div class="product-image">
-                <img src="assets/images/product1.jpg" alt="Eco-Friendly Cleaning Spray">
+                <img src="images/082949_5149-CleanCarpetFloorwithVacuumRobot.jpg" alt="Eco-Friendly Cleaning Spray">
             </div>
             <div class="product-info">
                 <h2>Eco-Friendly Cleaning Spray</h2>
@@ -36,13 +36,13 @@
         <h2>You May Also Like</h2>
         <div class="product-grid">
             <div class="product-item">
-                <img src="assets/images/product2.jpg" alt="Smart Vacuum Cleaner">
+                <img src="images/082949_5149-CleanCarpetFloorwithVacuumRobot.jpg" alt="Smart Vacuum Cleaner">
                 <h3>Smart Vacuum Cleaner</h3>
                 <p>$249.99</p>
                 <a href="product-details.html" class="view-details">View Details</a>
             </div>
             <div class="product-item">
-                <img src="assets/images/product3.jpg" alt="Organic Floor Cleaner">
+                <img src="images/082949_5149-CleanCarpetFloorwithVacuumRobot.jpg" alt="Organic Floor Cleaner">
                 <h3>Organic Floor Cleaner</h3>
                 <p>$29.99</p>
                 <a href="product-details.html" class="view-details">View Details</a>
